--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         "laravelcollective/html": "^5.6",
         "mcamara/laravel-localization": "^1.3",
         "nwidart/laravel-modules": "^3.0",
-        "prettus/l5-repository": "^2.6"
+        "prettus/l5-repository": "^2.6",
+        "zizaco/entrust": "5.2.x-dev"
     },
     "require-dev": {
         "filp/whoops": "~2.0",
