--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,6 +1,6 @@
 {
+    "/modules/architect/js/app.js": "/modules/architect/js/app.js",
     "/js/app.js": "/js/app.js",
     "/css/app.css": "/css/app.css",
-    "/modules/architect/css/app.css": "/modules/architect/css/app.css",
-    "/modules/architect/js/app.js": "/modules/architect/js/app.js"
+    "/modules/architect/css/app.css": "/modules/architect/css/app.css"
 }
