--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
         "mcamara/laravel-localization": "^1.3",
         "nwidart/laravel-modules": "^3.0",
         "prettus/l5-repository": "^2.6",
-        "zizaco/entrust": "5.2.x-dev"
+        "zizaco/entrust": "^1.9"
     },
     "require-dev": {
         "filp/whoops": "~2.0",
