--- a/package.json
+++ b/package.json
@@ -19,9 +19,17 @@
         "cross-env": "^5.1",
         "jquery": "^3.2",
         "laravel-mix": "^2.0",
-        "lodash": "^4.17.4",
+        "lodash": "^4.17.10",
         "popper.js": "^1.12",
         "react": "^16.2.0",
         "react-dom": "^16.2.0"
+    },
+    "dependencies": {
+        "immutability-helper": "^2.7.0",
+        "react-bootstrap": "^0.32.1",
+        "react-bootstrap-select": "^0.14.0",
+        "react-dnd": "^2.6.0",
+        "react-dnd-html5-backend": "^2.6.0",
+        "react-select": "^2.0.0-beta.5"
     }
 }
