--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "mcamara/laravel-localization": "^1.3",
         "nwidart/laravel-modules": "^3.0",
         "prettus/l5-repository": "^2.6",
+        "yajra/laravel-datatables-oracle": "~8.0",
         "zizaco/entrust": "^1.9"
     },
     "require-dev": {
