--- a/package.json
+++ b/package.json
@@ -26,10 +26,12 @@
     },
     "dependencies": {
         "immutability-helper": "^2.7.0",
+        "moment": "^2.22.1",
         "react-autosuggest": "^9.3.4",
         "react-bootstrap": "^0.32.1",
         "react-bootstrap-select": "^0.14.0",
         "react-cropper": "^1.0.1",
+        "react-datepicker": "^1.5.0",
         "react-dnd": "^2.6.0",
         "react-dnd-html5-backend": "^2.6.0",
         "react-quill": "^1.2.7",
