--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     },
     "dependencies": {
         "immutability-helper": "^2.7.0",
+        "leaflet": "^1.3.1",
         "moment": "^2.22.1",
         "react-autosuggest": "^9.3.4",
         "react-bootstrap": "^0.32.1",
@@ -34,6 +35,7 @@
         "react-datepicker": "^1.5.0",
         "react-dnd": "^2.6.0",
         "react-dnd-html5-backend": "^2.6.0",
+        "react-leaflet": "^1.9.1",
         "react-quill": "^1.2.7",
         "react-select": "^2.0.0-beta.5",
         "rodal": "^1.6.3",
