--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
         "zizaco/entrust": "^1.9"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "^3.1",
         "filp/whoops": "~2.0",
         "mockery/mockery": "~1.0",
         "nunomaduro/collision": "~2.0",
