--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,10 @@ Homestead.json
 /rec
 /node_modules
 /public/hot
-/public/storage
+/public/storage/debugbar
+/public/storage/framework
+/public/storage/logs
+/public/storage/medias
 /storage/*.key
 /storage/debugbar
 /vendor
