--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,7 +1,8 @@
 RewriteEngine On
 RewriteBase /
-RewriteCond %{HTTP_HOST} !^www\. [NC]
-RewriteRule ^(.*)$ http://www.%{HTTP_HOST}/$1 [R=301,L]
+
+#RewriteCond %{HTTP_HOST} !^www\. [NC]
+#RewriteRule ^(.*)$ http://www.%{HTTP_HOST}/$1 [R=301,L]
 
 <IfModule mod_rewrite.c>
     <IfModule mod_negotiation.c>
