--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "laravel/framework": "5.6.*",
         "laravel/tinker": "~1.0",
         "laravelcollective/html": "^5.4.0",
+        "mariuzzo/laravel-js-localization": "^1.4",
         "mcamara/laravel-localization": "^1.3",
         "nwidart/laravel-modules": "^3.0",
         "prettus/l5-repository": "^2.6",
