--- a/package.json
+++ b/package.json
@@ -18,15 +18,19 @@
         "browser-sync-webpack-plugin": "^2.2.2",
         "cross-env": "^5.1",
         "jquery": "^3.2",
+        "laravel-localization-loader": "^1.0.5",
         "laravel-mix": "^2.0",
         "lodash": "^4.17.10",
         "popper.js": "^1.12",
         "react": "^16.2.0",
-        "react-dom": "^16.2.0"
+        "react-dom": "^16.2.0",
+        "webpack-shell-plugin": "^0.5.0"
     },
     "dependencies": {
         "font-awesome": "^4.7.0",
         "immutability-helper": "^2.7.0",
+        "install": "^0.12.1",
+        "lang.js": "^1.1.12",
         "leaflet": "^1.3.1",
         "moment": "^2.22.1",
         "react-autosuggest": "^9.3.4",
