--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,7 @@ Homestead.json
 /rec
 /node_modules
 /public/hot
-/public/storage/
+/public/storage
 /storage/debugbar
 /storage/framework
 /storage/logs
@@ -20,3 +20,5 @@ Homestead.yaml
 npm-debug.log
 yarn-error.log
 .env
+/public/.htaccess
+/public/.htpasswd
