--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
         "php": ">=7.1.3",
         "doctrine/dbal": "^2.7",
         "fideloper/proxy": "~4.0",
-        "fzaninotto/faker": "^1.7",
+        "fzaninotto/faker": "^1.8",
         "google/apiclient": "^2.2",
         "intervention/image": "^2.4",
         "jenssegers/date": "^3.3",
@@ -22,12 +22,13 @@
         "nwidart/laravel-modules": "^3.0",
         "prettus/l5-repository": "^2.6",
         "tightenco/ziggy": "^0.6.6",
-        "yajra/laravel-datatables-oracle": "~7.0",
+        "yajra/laravel-datatables-oracle": "~8.0",
         "zizaco/entrust": "^1.9"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.1",
         "filp/whoops": "~2.0",
+        "guidocella/eloquent-populator": "^2.1",
         "mockery/mockery": "~1.0",
         "nunomaduro/collision": "~2.0",
         "phpunit/phpunit": "~7.0",
