--- a/package.json
+++ b/package.json
@@ -27,12 +27,15 @@
         "webpack-shell-plugin": "^0.5.0"
     },
     "dependencies": {
+        "classnames": "^2.2.6",
         "font-awesome": "^4.7.0",
         "immutability-helper": "^2.7.0",
         "install": "^0.12.1",
         "lang.js": "^1.1.12",
         "leaflet": "^1.3.1",
+        "lodash.assign": "^4.2.0",
         "moment": "^2.22.1",
+        "radium": "^0.24.1",
         "react-autosuggest": "^9.3.4",
         "react-bootstrap": "^0.32.1",
         "react-bootstrap-select": "^0.14.0",
@@ -41,6 +44,7 @@
         "react-dnd": "^2.6.0",
         "react-dnd-html5-backend": "^2.6.0",
         "react-leaflet": "^1.9.1",
+        "react-modal-bootstrap": "^1.1.1",
         "react-quill": "^1.2.7",
         "react-select": "^2.0.0-beta.6",
         "react-slick": "^0.23.1",
