--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "mariuzzo/laravel-js-localization": "^1.4",
         "mcamara/laravel-localization": "^1.3",
         "nwidart/laravel-modules": "^3.0",
+        "petercoles/multilingual-country-list": "^1.2",
         "prettus/l5-repository": "^2.6",
         "tightenco/ziggy": "^0.6.6",
         "yajra/laravel-datatables-oracle": "~8.0",
