--- a/package.json
+++ b/package.json
@@ -1,54 +1,55 @@
 {
-    "private": true,
-    "scripts": {
-        "dev": "npm run development",
-        "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-        "watch": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --watch --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-        "watch-poll": "npm run watch -- --watch-poll",
-        "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
-        "prod": "npm run production",
-        "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
-    },
-    "devDependencies": {
-        "axios": "^0.18.0",
-        "babel-preset-react": "^6.23.0",
-        "bootstrap": "^4.0.0",
-        "bootstrap-sass": "^3.3.7",
-        "browser-sync": "^2.24.4",
-        "browser-sync-webpack-plugin": "^2.2.2",
-        "cross-env": "^5.1",
-        "jquery": "^3.2",
-        "laravel-localization-loader": "^1.0.5",
-        "laravel-mix": "^2.0",
-        "lodash": "^4.17.10",
-        "popper.js": "^1.12",
-        "react": "^16.2.0",
-        "react-dom": "^16.2.0",
-        "webpack-shell-plugin": "^0.5.0"
-    },
-    "dependencies": {
-        "classnames": "^2.2.6",
-        "font-awesome": "^4.7.0",
-        "immutability-helper": "^2.7.0",
-        "install": "^0.12.1",
-        "lang.js": "^1.1.12",
-        "leaflet": "^1.3.1",
-        "lodash.assign": "^4.2.0",
-        "moment": "^2.22.1",
-        "radium": "^0.24.1",
-        "react-autosuggest": "^9.3.4",
-        "react-bootstrap": "^0.32.1",
-        "react-bootstrap-select": "^0.14.0",
-        "react-cropper": "^1.0.1",
-        "react-datepicker": "^1.5.0",
-        "react-dnd": "^2.6.0",
-        "react-dnd-html5-backend": "^2.6.0",
-        "react-leaflet": "^1.9.1",
-        "react-modal-bootstrap": "^1.1.1",
-        "react-quill": "^1.2.7",
-        "react-select": "^2.0.0-beta.6",
-        "react-slick": "^0.23.1",
-        "rodal": "^1.6.3",
-        "slugify": "^1.3.0"
-    }
+  "private": true,
+  "scripts": {
+    "dev": "npm run development",
+    "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
+    "watch": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --watch --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
+    "watch-poll": "npm run watch -- --watch-poll",
+    "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
+    "prod": "npm run production",
+    "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
+  },
+  "devDependencies": {
+    "axios": "^0.18.0",
+    "babel-preset-react": "^6.23.0",
+    "bootstrap": "^4.0.0",
+    "bootstrap-sass": "^3.3.7",
+    "browser-sync": "^2.24.4",
+    "browser-sync-webpack-plugin": "^2.2.2",
+    "cross-env": "^5.1",
+    "jquery": "^3.2",
+    "laravel-localization-loader": "^1.0.5",
+    "laravel-mix": "^2.0",
+    "lodash": "^4.17.10",
+    "popper.js": "^1.12",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
+    "webpack-shell-plugin": "^0.5.0"
+  },
+  "dependencies": {
+    "classnames": "^2.2.6",
+    "font-awesome": "^4.7.0",
+    "immutability-helper": "^2.7.0",
+    "install": "^0.12.1",
+    "lang.js": "^1.1.12",
+    "leaflet": "^1.3.1",
+    "lodash.assign": "^4.2.0",
+    "moment": "^2.22.1",
+    "radium": "^0.24.1",
+    "react-autosuggest": "^9.3.4",
+    "react-bootstrap": "^0.32.1",
+    "react-bootstrap-select": "^0.14.0",
+    "react-cropper": "^1.0.1",
+    "react-datepicker": "^1.5.0",
+    "react-dnd": "^2.6.0",
+    "react-dnd-html5-backend": "^2.6.0",
+    "react-leaflet": "^1.9.1",
+    "react-masonry-component": "^6.2.1",
+    "react-modal-bootstrap": "^1.1.1",
+    "react-quill": "^1.2.7",
+    "react-select": "^2.0.0-beta.6",
+    "react-slick": "^0.23.1",
+    "rodal": "^1.6.3",
+    "slugify": "^1.3.0"
+  }
 }
