changes to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -11,9 +11,7 @@ Homestead.json
 /public/storage
 /public/.htpasswd
 /storage/*.key
-/storage/debugbar
-/storage/framework
-/storage/logs
+/storage
 /vendor
 /.idea
 /.vagrant
