--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "font-awesome": "^4.7.0",
     "immutability-helper": "^2.7.0",
     "install": "^0.12.1",
+    "jsx-to-string": "^1.4.0",
     "lang.js": "^1.1.12",
     "leaflet": "^1.3.1",
     "lodash.assign": "^4.2.0",
