--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,6 @@ Homestead.yaml
 npm-debug.log
 yarn-error.log
 .env
+storage/framework/cache/*
+storage/framework/views/*
+storage/framework/logs/*
