--- a/composer.json
+++ b/composer.json
@@ -6,8 +6,9 @@
     "type": "project",
     "require": {
         "php": ">=7.1.3",
-        "doctrine/dbal": "^2.7",
         "acoustep/entrust-gui": "5.2.x-dev",
+        "artesaos/laravel-linkedin": "^1.3",
+        "doctrine/dbal": "^2.7",
         "elasticsearch/elasticsearch": "^6.0",
         "fideloper/proxy": "~4.0",
         "fzaninotto/faker": "^1.8",
