--- a/composer.json
+++ b/composer.json
@@ -62,18 +62,17 @@
     },
     "scripts": {
         "post-root-package-install": [
-            "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
+            "php -r \"file_exists('.env') || copy('.env.example', '.env');\""
         ],
         "post-create-project-cmd": [
-            "@php artisan key:generate"
+            "php artisan key:generate"
         ],
         "post-autoload-dump": [
             "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
-            "@php artisan package:discover"
+            "php artisan package:discover"
         ],
         "post-install-cmd": [
-            "php artisan clear-compiled",
-            "chmod -R 777 public/"
+            "php artisan clear-compiled"
         ]
     },
     "config": {
