--- a/composer.json
+++ b/composer.json
@@ -72,7 +72,7 @@
             "@php artisan package:discover"
         ],
         "post-install-cmd": [
-            "php artisan clear-compiled",
+            "php artisan clear-compiled"
         ]
     },
     "config": {
