- Add feature publish offer to facebook page
EX :
FACEBOOK_APP_ID=1918170388280135
FACEBOOK_APP_SECRET=01dcc4212193a581f8580b9feb1f80c7
FACEBOOK_PAGE_ID=120146395340595
FACEBOOK_ACCESS_TOKEN=EAAbQkNics0cBAOxR0MTbFmkyHRsegxByR8BCZBoEupiiZB6d6GszNcfzf6j1j6yFVTk6FkRwol14ELmXTHFFJ96CVDiW3FZBBRlQLP3AQJ8hVQEj3PknlkyKaNzLsvT4BM5GnwP0X22dXx49m8af1yJX5MZCPk2qCZBueYmkMMwZDZD

--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "acoustep/entrust-gui": "5.2.x-dev",
         "doctrine/dbal": "^2.7",
         "elasticsearch/elasticsearch": "^6.0",
+        "facebook/graph-sdk": "^5.7",
         "fideloper/proxy": "~4.0",
         "fzaninotto/faker": "^1.8",
         "google/apiclient": "^2.2",
