--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,10 @@ Homestead.json
 /public/storage
 /public/.htpasswd
 /storage/*.key
+/storage/app/
+/storage/framework/cache
+/storage/framework/views
+/storage/framework/sessions
 /vendor
 /.idea
 /.vagrant
