--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,10 @@ Homestead.json
 /public/storage
 /public/.htpasswd
 /storage/*.key
-/storage
+/storage/app
+/storage/framework/cache
+/storage/framework/sessions
+/storage/framework/views
 /vendor
 /.idea
 /.vagrant
