--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@ Homestead.json
 /storage/framework/cache
 /storage/framework/sessions
 /storage/framework/views
+/storage/logs/
 /vendor
 /.idea
 /.vagrant
