--- a/composer.json
+++ b/composer.json
@@ -28,11 +28,9 @@
         "petercoles/multilingual-country-list": "^1.2",
         "prettus/l5-repository": "^2.6",
         "tightenco/ziggy": "^0.6.6",
-        "yajra/laravel-datatables-oracle": "~8.0",
-        "zizaco/entrust": "^1.9"
+        "yajra/laravel-datatables-oracle": "~8.0"
     },
     "require-dev": {
-        "barryvdh/laravel-debugbar": "^3.1",
         "filp/whoops": "~2.0",
         "guidocella/eloquent-populator": "^2.1",
         "mockery/mockery": "~1.0",
