--- a/package.json
+++ b/package.json
@@ -12,50 +12,54 @@
   "devDependencies": {
     "@babel/core": "^7.3.3",
     "@babel/preset-env": "^7.3.1",
-    "axios": "^0.18.0",
+    "@fortawesome/fontawesome-free": "^5.9.0",
+    "axios": "^0.18.1",
     "babel-core": "^6.26.3",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.23.0",
-    "bootstrap": "^4.0.0",
-    "bootstrap-sass": "^3.3.7",
-    "browser-sync": "^2.24.4",
+    "bootstrap": "^4.3.1",
+    "bootstrap-sass": "^3.4.1",
+    "browser-sync": "^2.26.7",
     "browser-sync-webpack-plugin": "^2.2.2",
     "copy-webpack-plugin": "^4.6.0",
-    "cross-env": "^5.1",
-    "jquery": "^3.2",
+    "cross-env": "^5.2.0",
+    "jquery": "^3.4.1",
     "laravel-localization-loader": "^1.0.5",
-    "laravel-mix": "^2.0",
-    "lodash": "^4.17.10",
-    "popper.js": "^1.12",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
+    "laravel-mix": "^2.1.14",
+    "lodash": "^4.17.11",
+    "popper.js": "^1.15.0",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "react-redux": "^7.1.0",
+    "redux": "^4.0.1",
     "webpack-shell-plugin": "^0.5.0"
   },
   "dependencies": {
     "classnames": "^2.2.6",
     "font-awesome": "^4.7.0",
-    "immutability-helper": "^2.7.0",
-    "install": "^0.12.1",
+    "immutability-helper": "^2.9.1",
+    "install": "^0.12.2",
     "jsx-to-string": "^1.4.0",
-    "lang.js": "^1.1.12",
-    "leaflet": "^1.3.1",
+    "lang.js": "^1.1.14",
+    "leaflet": "^1.5.1",
     "lodash.assign": "^4.2.0",
-    "moment": "^2.22.1",
+    "moment": "^2.24.0",
     "radium": "^0.24.1",
-    "react-autosuggest": "^9.3.4",
-    "react-bootstrap": "^0.32.1",
+    "react-autosuggest": "^9.4.3",
+    "react-bootstrap": "^0.32.4",
     "react-bootstrap-select": "^0.14.0",
-    "react-cropper": "^1.0.1",
-    "react-datepicker": "^1.5.0",
+    "react-cropper": "^1.2.0",
+    "react-datepicker": "^1.8.0",
     "react-dnd": "^2.6.0",
     "react-dnd-html5-backend": "^2.6.0",
     "react-leaflet": "^1.9.1",
     "react-masonry-component": "^6.2.1",
     "react-modal-bootstrap": "^1.1.1",
-    "react-quill": "^1.2.7",
-    "react-select": "^2.0.0-beta.6",
-    "react-slick": "^0.23.1",
+    "react-quill": "^1.3.3",
+    "react-select": "^2.4.4",
+    "react-slick": "^0.23.2",
+    "redux-thunk": "^2.3.0",
     "rodal": "^1.6.3",
-    "slugify": "^1.3.0"
+    "slugify": "^1.3.4"
   }
 }
