--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "lang.js": "^1.1.14",
     "leaflet": "^1.5.1",
     "lodash.assign": "^4.2.0",
+    "match-sorter": "^3.1.1",
     "moment": "^2.24.0",
     "radium": "^0.24.1",
     "react-autosuggest": "^9.4.3",
@@ -60,6 +61,7 @@
     "react-quill": "^1.3.3",
     "react-select": "^2.4.4",
     "react-slick": "^0.23.2",
+    "react-table": "^6.10.0",
     "redux-thunk": "^2.3.0",
     "rodal": "^1.6.3",
     "slugify": "^1.3.4"
