--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "react-datepicker": "^1.8.0",
     "react-dnd": "^2.6.0",
     "react-dnd-html5-backend": "^2.6.0",
+    "react-file-picker": "0.0.6",
     "react-leaflet": "^1.9.1",
     "react-masonry-component": "^6.2.1",
     "react-modal-bootstrap": "^1.1.1",
