--- a/Modules/Architect/package.json
+++ b/Modules/Architect/package.json
@@ -50,6 +50,7 @@
     "react-autosuggest": "^9.4.3",
     "react-bootstrap": "^0.32.4",
     "react-bootstrap-select": "^0.14.0",
+    "react-color": "^2.17.3",
     "react-cropper": "^1.2.0",
     "react-data-grid": "^6.1.0",
     "react-data-grid-addons": "^6.1.0",
@@ -64,6 +65,10 @@
     "react-select": "^2.4.4",
     "react-slick": "^0.23.2",
     "react-table": "^6.10.0",
+    "react-widgets": "^4.4.11",
+    "react-widgets-moment": "^4.0.27",
+    "react-widgets-simple-number": "^4.1.23",
+    "reactcss": "^1.2.3",
     "redux-thunk": "^2.3.0",
     "rodal": "^1.6.3",
     "slugify": "^1.3.4"
