--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "install": "^0.12.2",
     "jsx-to-string": "^1.4.0",
     "lang.js": "^1.1.14",
+    "laravel-mix-merge-manifest": "^0.1.2",
     "leaflet": "^1.5.1",
     "lodash.assign": "^4.2.0",
     "match-sorter": "^3.1.1",
