--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,8 @@
         "league/oauth2-linkedin": "^4.1",
         "mariuzzo/laravel-js-localization": "^1.4",
         "mcamara/laravel-localization": "^1.3",
+        "mll-lab/laravel-graphql-playground": "^2.0",
+        "nuwave/lighthouse": "^4.7",
         "nwidart/laravel-modules": "^4.1",
         "petercoles/multilingual-country-list": "^1.2",
         "prettus/l5-repository": "^2.6",
