--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "laravel-localization-loader": "^1.0.5",
     "laravel-mix": "^2.1.14",
     "lodash": "^4.17.11",
+    "node-sass": "^4.13.0",
     "popper.js": "^1.15.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
