--- a/.env.testing
+++ b/.env.testing
@@ -1,16 +1,12 @@
-APP_NAME='App Name'
+APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:psTHqwAEIs+BWJ17bNd8zC4nSg0ZtVv903fjU4VED9I=
+APP_KEY=base64:SvGi++IUnimocotLiMxTVNkD1F0jT54h701Al6nGIpg=
 APP_DEBUG=true
-APP_LOG_LEVEL=debug
-APP_URL=http://localhost:8888
+APP_URL=http://localhost
 
-DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=8889
-DB_DATABASE=iga_arilim
-DB_USERNAME=root
-DB_PASSWORD=root
+LOG_CHANNEL=stack
+
+DB_CONNECTION=sqlite_testing
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -25,24 +21,21 @@ REDIS_PORT=6379
 MAIL_DRIVER=smtp
 MAIL_HOST=smtp.mailtrap.io
 MAIL_PORT=2525
-MAIL_USERNAME=6c681e3fc0863f
-MAIL_PASSWORD=c0404ae2c94ae8
+MAIL_USERNAME=228d81f0c31a7e
+MAIL_PASSWORD=a8172a140d676d
 MAIL_ENCRYPTION=tls
 
-MAIL_COMPANY_DIRECTION='http://www.appdomain.com'
-MAIL_COMPANY_NAME='App Name'
-MAIL_COMPANY_EMAIL='info@appdomain.com'
+PUSHER_APP_ID=
+PUSHER_APP_KEY=
+PUSHER_APP_SECRET=
+PUSHER_APP_CLUSTER=mt1
 
+MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
+MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 ELASTICSEARCH_ENABLED=false
 ELASTICSEARCH_HOST=localhost
 ELASTICSEARCH_PORT=9200
-
-UPLOAD_IMAGES=public/images/upload/
-
-WEBSITE_DOMAIN=appdomain.localhost
-
-ARCHITECT_MULTI_LANGUAGE=false
 
 WS_URL=https://arilim.rec-veos.iga.fr/rs/rsExtranet2/
 WS_URL_TEST=https://arilim.preprod-veos.iga.fr/rs/rsExtranet2/
