--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,9 @@
 [submodule "Modules/Architect"]
     path = Modules/Architect
-    url = https://gitlab.iga.fr/syntesy/insurancearchitect.git
+    url = https://github.com/SyntesyDigital/InsuranceArchitect.git
     branch = master
 
 [submodule "Modules/Extranet"]
     path = Modules/Extranet
-    url = https://gitlab.iga.fr/syntesy/insuranceextranet.git
+    url = https://github.com/SyntesyDigital/InsuranceExtranet.git
     branch = master
