--- a/composer.json
+++ b/composer.json
@@ -28,6 +28,7 @@
         "nwidart/laravel-modules": "^4.1",
         "petercoles/multilingual-country-list": "^1.2",
         "prettus/l5-repository": "^2.6",
+        "sentry/sentry-laravel": "1.8.0",
         "syntesy-digital/insurance-installer": "dev-master",
         "tightenco/ziggy": "^0.6.6",
         "yajra/laravel-datatables-oracle": "~8.0"
